--- a/LoLBS-win32-x64/resources/app/index.html
+++ b/LoLBS-win32-x64/resources/app/index.html
@@ -22,6 +22,9 @@
         <li>
           <a href="championcomparison.html" class="btn btn-secondary" role="button">Champion Comparison</a>
         </li>
+        <li>
+          <a href="help.html" class="btn btn-secondary" role="button">Help</a>
+        </li>
       </ul>
     </nav>
     <div class="container">
@@ -29,25 +32,6 @@
       <p>This program has a table of all the base statistics of all the champions within League of Legends</p>
       <p>The data for this table is taken from the web each time this program is open, ensuring it is up to date</p>
       <p>To get started click on either the Champion Stats button for their base statistics or the Champion Comparison button to compare</p>
-      <h3>Key</h3>
-      <p class="mb-1"><b>HP:</b> Health Points</p>
-      <p class="mb-1"><b>HP+:</b> Health Points gained per level</p>
-      <p class="mb-1"><b>HP5:</b> Health Regeneration</p>
-      <p class="mb-1"><b>HP5+:</b> Health Regeneration gained per level</p>
-      <p class="mb-1"><b>MP:</b> Mana Points</p>
-      <p class="mb-1"><b>MP+:</b> Mana Points gained per level</p>
-      <p class="mb-1"><b>MP5:</b> Mana Regeneration</p>
-      <p class="mb-1"><b>MP5+:</b> Mana Regeneration gained per level</p>
-      <p class="mb-1"><b>AD:</b> Attack Damage</p>
-      <p class="mb-1"><b>AD+:</b> Attack Damage gained per level</p>
-      <p class="mb-1"><b>AS:</b> Attack Speed</p>
-      <p class="mb-1"><b>AS+:</b> Attack Speed gained per level</p>
-      <p class="mb-1"><b>AR:</b> Armour</p>
-      <p class="mb-1"><b>AR+:</b> Armour gained per level</p>
-      <p class="mb-1"><b>MR:</b> Magic Resist</p>
-      <p class="mb-1"><b>MR+:</b> "Magic Resist gained per level</p>
-      <p class="mb-1"><b>MS:</b> Movement Speed</p>
-      <p class="mb-1"><b>Range:</b> Auto Attack Range</p>
     </div>
     <script>
       // You can also require other files to run in this process
