--- a/championstats.html
+++ b/championstats.html
@@ -26,6 +26,9 @@
         <li>
           <a href="championcomparison.html" class="btn btn-secondary" role="button">Champion Comparison</a>
         </li>
+        <li>
+          <a href="help.html" class="btn btn-secondary" role="button">Help</a>
+        </li>
       </ul>
     </nav>
     <div class="container mt-2">
