--- a/help.html
+++ b/help.html
@@ -14,7 +14,7 @@
       <a class="navbar-brand">LoLBS</a>
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a href="index.html" class="btn btn-secondary active" role="button">Home</a>
+          <a href="index.html" class="btn btn-secondary" role="button">Home</a>
         </li>
         <li class="nav-item">
           <a href="championstats.html" class="btn btn-secondary" role="button">Champion Stats</a>
@@ -23,15 +23,34 @@
           <a href="championcomparison.html" class="btn btn-secondary" role="button">Champion Comparison</a>
         </li>
         <li>
-          <a href="help.html" class="btn btn-secondary" role="button">Help</a>
+          <a href="help.html" class="btn btn-secondary active" role="button">Help</a>
         </li>
       </ul>
     </nav>
     <div class="container">
-      <h1>Welcome to Legend of Legends Base Stats program!</h1>
-      <p>This program has a table of all the base statistics of all the champions within League of Legends</p>
-      <p>The data for this table is taken from the web each time this program is open, ensuring it is up to date</p>
-      <p>To get started click on either the Champion Stats button for their base statistics or the Champion Comparison button to compare</p>
+      <h1>Help Page</h1>
+      <p>If your champion stats table is taking a long period of time to load just try waiting a bit as it might run slow on some computers</p>
+      <p>The table also can take a while to sort</p>
+      <p>You can hover over the headers of the table to get the meaning of them</p>
+      <h3>Key</h3>
+      <p class="mb-1"><b>HP:</b> Health Points</p>
+      <p class="mb-1"><b>HP+:</b> Health Points gained per level</p>
+      <p class="mb-1"><b>HP5:</b> Health Regeneration</p>
+      <p class="mb-1"><b>HP5+:</b> Health Regeneration gained per level</p>
+      <p class="mb-1"><b>MP:</b> Mana Points</p>
+      <p class="mb-1"><b>MP+:</b> Mana Points gained per level</p>
+      <p class="mb-1"><b>MP5:</b> Mana Regeneration</p>
+      <p class="mb-1"><b>MP5+:</b> Mana Regeneration gained per level</p>
+      <p class="mb-1"><b>AD:</b> Attack Damage</p>
+      <p class="mb-1"><b>AD+:</b> Attack Damage gained per level</p>
+      <p class="mb-1"><b>AS:</b> Attack Speed</p>
+      <p class="mb-1"><b>AS+:</b> Attack Speed gained per level</p>
+      <p class="mb-1"><b>AR:</b> Armour</p>
+      <p class="mb-1"><b>AR+:</b> Armour gained per level</p>
+      <p class="mb-1"><b>MR:</b> Magic Resist</p>
+      <p class="mb-1"><b>MR+:</b> "Magic Resist gained per level</p>
+      <p class="mb-1"><b>MS:</b> Movement Speed</p>
+      <p class="mb-1"><b>Range:</b> Auto Attack Range</p>
     </div>
     <script>
       // You can also require other files to run in this process
